src/test/resources/parse/reject/noSemicolonNestedVariableDeclaration.ul
int bar ()
{
    int id1;
    int id1
    int id1;
}
